@@ -5,7 +5,8 @@ Changelog
 1.10.1 (unreleased)
 -------------------
 
-- Nothing changed yet.
+- Bugfix of the option to hide emtpy news listing block introduced
+  in 1.10.0. [mbaechtold]
 
 
 1.10.0 (2017-10-12)
